<resources>
    <string name="app_name">Budapest Quiz App</string>
    <string name="welcome">Welcome to the Budapest Quiz App!</string>
    <string name="instruction">Answer the following questions to discover how much you know about the capital of Hungary.</string>
    <string name="name_instruction">Please enter your name</string>
    <string name="start">Start</string>
    <string name="new_question">New Question</string>
    <string-array name="question">
        <item>Which river flows through Budapest?</item>
        <item>How much is the population of Budapest?</item>
        <item>How many metro lines does Budapest have?</item>
        <item>How much is the living standard of Budapest in relation to the EU average?</item>
        <item>Which is a famous sight of Budapest amongst the followings?</item>
        <item>How many bridges are there in Budapest?</item>
        <item>When was Budapest founded (in his present state)?</item>
    </string-array>
    <string-array name="answer1">
        <item>Danube</item>
        <item>Volga</item>
        <item>Spree</item>
        <item>Tisza</item>
    </string-array>
    <string-array name="answer2">
        <item>Around 750.000</item>
        <item>Around 1.250.000</item>
        <item>Around 2.000.000</item>
        <item>Around 3.500.000</item>
    </string-array>
    <string-array name="answer3">
    <item>5</item>
    <item>4</item>
    <item>3</item>
    <item>1</item>
    </string-array>
    <string-array name="answer4">
        <item>Around 75%</item>
        <item>Around 100%</item>
        <item>Around 120%</item>
        <item>Around 135%</item>
    </string-array>
    <string-array name="answer5">
        <item>The Hradzin</item>
        <item>The Pissing Boy</item>
        <item>The Prater</item>
        <item>The Halaszbastya</item>
    </string-array>
    <string-array name="answer6">
        <item>12</item>
        <item>8</item>
        <item>6</item>
        <item>5</item>
    </string-array>
    <string-array name="answer7">
        <item>1012</item>
        <item>1873</item>
        <item>1799</item>
        <item>1453</item>
    </string-array>
    <string name="question">Question</string>
    <string name="toast">You have to mark at least one answer</string>
    <string name="getResults">Get the results</string>
    <string name="results">Your Results</string>
    <string name="answers">Your answers:</string>
    <string name="wrongAnswerText">the right answer is:</string>
    <string name="rightAnswerText">and this is the right answer</string>
    <string name="youHave">You have</string>
    <string name="points">right answers</string>
    <string name="playAgain">Play Again</string>
    <string name="send">Send</string>
    <string name="yourName">Your Name</string>
    <string name="yourEmail">Your E-mail</string>
    <string name="sendInstruction">Send your results in e-mail</string>
    <string name="emailSub">My BudapestQuizApp answers</string>
    <string name="dear">Dear</string>
    <string name="checkboxText">I accept the terms</string>
    <string name="acceptTerms">You have to accept the terms</string>
    <string name="withName">With name</string>
    <string name="withoutName">Without name</string>
</resources>
