<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBackground"
    android:orientation="vertical"
    android:padding="@dimen/default_margin"
    tools:context="com.example.android.budapestquizapp.MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

    <TextView
        style="@style/TitleStyle"
        android:text="@string/app_name" />

    <ImageView
        style="@style/ImageStyle"
        android:src="@drawable/parlament" />

    <TextView
        style="@style/InstructionStyle"
        android:text="@string/welcome" />

    <TextView
        style="@style/InstructionStyle"
        android:gravity="center_horizontal"
        android:text="@string/instruction" />


    <Button
        style="@style/MoreButtonStyle"
        android:text="@string/start"
        android:onClick="startQuiz"/>
    </LinearLayout>

</ScrollView>
