<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBackground">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="@dimen/default_margin">

        <TextView
            android:id="@+id/titleTextView"
            style="@style/TitleStyle"
            tools:text="@string/question" />

        <ImageView
            android:id="@+id/image"
            style="@style/ImageStyle"
            android:layout_height="180dp"
            tools:src="@drawable/bazilika" />

        <TextView
            android:id="@+id/questionTextView"
            style="@style/InstructionStyle"
            tools:text="Which river flows through Budapest?" />

        <LinearLayout
            android:id="@+id/answerContainer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <EditText
                android:id="@+id/textAnswer"
                android:inputType="textCapWords"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:visibility="visible" />

            <LinearLayout
                android:id="@+id/checkGroup"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:visibility="gone">

                <CheckBox
                    android:id="@+id/check1"
                    style="@style/ButtonStyle"
                    tools:text="Answer 1" />

                <CheckBox
                    android:id="@+id/check2"
                    style="@style/ButtonStyle"
                    tools:text="Answer 2" />

                <CheckBox
                    android:id="@+id/check3"
                    style="@style/ButtonStyle"
                    tools:text="Answer 3" />

                <CheckBox
                    android:id="@+id/check4"
                    style="@style/ButtonStyle"
                    tools:text="Answer 4" />

            </LinearLayout>

            <RadioGroup
                android:id="@+id/radioGroup"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <RadioButton
                    android:id="@+id/answer1"
                    style="@style/ButtonStyle"
                    tools:text="Answer 1" />

                <RadioButton
                    android:id="@+id/answer2"
                    style="@style/ButtonStyle"
                    tools:text="Answer 2" />

                <RadioButton
                    android:id="@+id/answer3"
                    style="@style/ButtonStyle"
                    tools:text="Answer 3" />

                <RadioButton
                    android:id="@+id/answer4"
                    style="@style/ButtonStyle"
                    tools:text="Answer 4" />

            </RadioGroup>

        </LinearLayout>

        <Button
            android:id="@+id/moreButton"
            style="@style/MoreButtonStyle"
            android:onClick="newQuestion"
            android:paddingLeft="@dimen/default_margin"
            android:paddingRight="@dimen/default_margin"
            android:text="@string/new_question" />

        <LinearLayout
            android:id="@+id/sendLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:visibility="gone">

            <TextView
                style="@style/InstructionStyle"
                android:text="@string/sendInstruction" />

            <EditText
                android:id="@+id/name"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="@string/yourName"
                android:inputType="textPersonName"/>


            <EditText
                android:id="@+id/email"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="@string/yourEmail"
                android:inputType="textEmailAddress" />

            <CheckBox
                android:id="@+id/checkbox"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/checkboxText" />

            <Button
                android:id="@+id/sendButton"
                style="@style/MoreButtonStyle"
                android:onClick="sendResults"
                android:paddingLeft="@dimen/default_margin"
                android:paddingRight="@dimen/default_margin"
                android:text="@string/send" />
        </LinearLayout>

    </LinearLayout>

</ScrollView>